<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/score_content_description"
            android:gravity="center"
            android:textSize="@dimen/widget_score" />

        <TextView
            android:id="@+id/home_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/home_name_content_description"
            android:gravity="center"
            android:text="@string/empty_list"
            android:textSize="@dimen/widget_team_names" />

        <TextView
            android:id="@+id/away_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/away_name_content_description"
            android:gravity="center"
            android:textSize="@dimen/widget_team_names" />
    </LinearLayout>

</FrameLayout>